# SejongMusic

./: .gitignore  Pipfile  README.md  convert_jg_to_xml.py  convert_xml_to_jgb.py  generate_bert.py  generate_ensemble.py  get_test_result.py  inference_debug.py  make_inference.py  make_orchestration.py  make_orchestration_seq.py  make_orchestration_seq_haegeum.py  pyproject.toml  run_exp.sh  test_orchestra.py  train.py  train_era.py  train_jeonggan_orchestra.py  train_orchestra.py  train_orchestra_jg.py
music_score/: chihwapyeong_jg.txt  chihwapyung.musicxml  chwipunghyeong.musicxml  chwipunghyeong_bert_gen.txt  chwipunghyeong_jg.txt  cph_generated.musicxml
notebook/: abc-like.ipynb  apply_tie_in_music21.ipynb  bert_inference.ipynb  check_converter.ipynb  check_gugakwon_score.ipynb  convert_to_musicxml.ipynb  cph_manipulation.ipynb  data_processing copy.ipynb  data_processing.ipynb  data_processing_teo.ipynb  data_processing_teo2.ipynb  full_inference.ipynb  inference.ipynb  inference_debug.ipynb  inference_orchestration.ipynb  inference_teo.ipynb  inference_without_position.ipynb  jeonggan_processing.ipynb  jg_test.ipynb  melody_reduction.ipynb  metric.ipynb  mlm_dataset_prototype.ipynb  mlm_prototype.ipynb  musicxml_handling.ipynb  musicxml_to_jeonggan.ipynb  n_gram.ipynb  offsetmodel_test.ipynb  orchestra_score_handling.ipynb  refactor_debug.ipynb  refactoring.ipynb  remi-like.ipynb  sampling.ipynb  seq_model_debug.ipynb  simplified_conversion.ipynb  test.ipynb  transformer_prototype.ipynb  visualization.ipynb
sejong_music/: abc_utils.py  constants.py  decode.py  (+28 more)
(+67 files in other folders)
