[project]
name = "sejongmusic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.0.1",
    "hydra-core==1.3.2",
    "wandb==0.18.6",
    "omegaconf==2.3.0",
    "music21==8.3.0",
    "tqdm==4.67.0",
    "x-transformers==1.27.19",
    "pandas>=2.3.0",
]

[dependency-groups]
dev = [
    "ipykernel",
]
